--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
 
+  <!-- Rock Paper Scissors Project Card (keep this one) -->
+            <div class="project-card" data-category="javascript">
+                <div class="rps-game">
+                    <h3>Rock Paper Scissors</h3>
+                    <div class="game-container">
+                        <div class="choices">
+                            <button class="choice-btn" data-choice="rock">✊</button>
+                            <button class="choice-btn" data-choice="paper">✋</button>
+                            <button class="choice-btn" data-choice="scissors">✌️</button>
+                        </div>
+                        <div id="game-result" class="result-box">
+                            <p>Make your choice!</p>
+                        </div>
+                        <div class="scoreboard">
+                            <p>You: <span id="player-score">0</span></p>
+                            <p>Computer: <span id="computer-score">0</span></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-info">
+                    <h3>Rock Paper Scissors</h3>
+                    <p>Classic game with score tracking and responsive design.</p>
+                    <div class="tech-used">
+                        <span>HTML5</span>
+                        <span>CSS3</span>
+                        <span>JavaScript</span>
+                    </div>
